Заработал Swagger ура
ура ура ура
